--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
     "version": "0.5",
     "prefix": "//",
-    "token": "x",                         
-    "useToken": "false"                       
+    "token": ""                                               
 }
