--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-    "version": "0.5",
+    "version": "0.6",
     "prefix": "//",
-    "token": ""                                               
+    "token": "",
+    "usewebserver": true
 }
