--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.2.0",
+    "express": "^4.17.1",
     "ffmpeg": "0.0.4",
     "opusscript": "0.0.7"
   }
